[package]
name = "ftp_fs"
version = "0.1.0"
edition = "2021"
description = "A read-only FUSE filesystem for FTP servers using easy_fuser"

[dependencies]
easy_fuser = { path = "../..", features = ["parallel"] }
threadsafe-lru = "0.1.2"
clap = { version = "4.5", features = ["derive"] }
ctrlc = "3.4"
suppaftp = { version = "^6", features = ["native-tls"] }
