[package]
name = "in_memory_fs"
version = "0.1.0"
edition = "2021"

[features]
default = ["readme"]
readme = []
logging = ["dep:env_logger", "dep:log"]

[dependencies]
easy_fuser = { path = "../..", features = ["parallel"] }
log = { version = "0.4", optional = true }
env_logger = { version = "0.11", optional = true }