[package]
name = "zip_fs"
version = "0.1.2"
edition = "2021"
description = "A read-only FUSE filesystem for ZIP archives using easy_fuser"

[dependencies]
easy_fuser = { path = "../..", features = ["serial"] }
zip = "2.2.2"
clap = { version = "4.5", features = ["derive"] }
ctrlc = "3.4"

[dev-dependencies]
tempfile = "3.2"
